refactor: AdminController