@@ -1,6 +1,7 @@
 package br.com.juliocauan.authentication.controller;
 
 import java.util.List;
+import java.util.Set;
 
 import org.openapitools.api.AdminApi;
 import org.openapitools.model.DeleteRoleRequest;
@@ -15,9 +16,9 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.RestController;
 
+import br.com.juliocauan.authentication.domain.model.Role;
 import br.com.juliocauan.authentication.infrastructure.service.RoleServiceImpl;
 import br.com.juliocauan.authentication.infrastructure.service.UserServiceImpl;
-import br.com.juliocauan.authentication.infrastructure.service.application.AdminServiceImpl;
 import lombok.AllArgsConstructor;
 
 @RestController
@@ -27,25 +28,20 @@ public class AdminController implements AdminApi {
 
     private final UserServiceImpl userService;
     private final RoleServiceImpl roleService;
-    private final AdminServiceImpl adminService;
-
-    @Override
-    public ResponseEntity<OkResponse> _updateUserRoles(UpdateUserRolesForm updateUserRolesForm) {
-      userService.updateRoles(updateUserRolesForm.getUsername(), updateUserRolesForm.getRoles());
-      return ResponseEntity.status(HttpStatus.OK).body(new OkResponse().message("Patched user roles successfully!"));
-    }
   
     @Override
-    public ResponseEntity<List<UserInfo>> _getUsers(String username, String role) {
-      List<UserInfo> response = userService.getUserInfos(username, role);
+    public ResponseEntity<List<UserInfo>> _getUsers(String usernameContains, String role) {
+      List<UserInfo> response = userService.getUserInfos(usernameContains, role);
       return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
     @Override
-    public ResponseEntity<OkResponse> _registerRole(RegisterRoleRequest registerRoleRequest) {
-      roleService.register(registerRoleRequest.getRole());
-      return ResponseEntity.status(HttpStatus.CREATED).body(new OkResponse().message(
-        String.format("Role %s registered successfully!", registerRoleRequest.getRole())));
+    public ResponseEntity<OkResponse> _updateUserRoles(UpdateUserRolesForm updateUserRolesForm) {
+      String username = updateUserRolesForm.getUsername();
+      Set<String> newRoles = updateUserRolesForm.getRoles();
+      userService.updateRoles(updateUserRolesForm.getUsername(), updateUserRolesForm.getRoles());
+      return ResponseEntity.status(HttpStatus.OK).body(new OkResponse()
+        .message("Patched [%s] successfully! Roles: %s".formatted(username, newRoles)));
     }
 
     @Override
@@ -53,7 +49,7 @@ public class AdminController implements AdminApi {
       String username = deleteUserRequest.getUsername();
       userService.delete(username);
       return ResponseEntity.status(HttpStatus.OK).body(new OkResponse().message(
-        String.format("User %s deleted successfully!", username)));
+        String.format("User [%s] deleted successfully!", username)));
     }
 
     @Override
@@ -63,12 +59,25 @@ public class AdminController implements AdminApi {
     }
 
     @Override
+    public ResponseEntity<OkResponse> _registerRole(RegisterRoleRequest registerRoleRequest) {
+      roleService.register(registerRoleRequest.getRole());
+      return ResponseEntity.status(HttpStatus.CREATED).body(new OkResponse().message(
+        String.format("Role [%s] registered successfully!", registerRoleRequest.getRole())));
+    }
+
+    @Override
     @Transactional
     public ResponseEntity<OkResponse> _deleteRole(DeleteRoleRequest deleteRoleRequest) {
-      String role = deleteRoleRequest.getRole();
-      adminService.delete(role);
+      Role role = roleService.getByName(deleteRoleRequest.getRole());
+      List<UserInfo> users = userService.getUserInfos(null, role.getName());
+      users.forEach(user -> {
+          Set<String> roles = user.getRoles();
+          roles.remove(role.getName());
+          userService.updateRoles(user.getUsername(), roles);
+      });
+      roleService.delete(role);
       return ResponseEntity.status(HttpStatus.OK).body(new OkResponse().message(
-        String.format("Role %s deleted successfully!", role)));
+        String.format("Role [%s] deleted successfully!", role)));
     }
     
 
